<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/library_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.LibraryPageFragment"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical">

    <!--  Search fragment -->
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UselessLeaf" >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/border"
                >
            </ImageView>

            <TextView
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/spotify_mix"
                android:text="@string/yourlib_title">
            </TextView>

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/search"
                >

            </ImageButton>

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/add"
                >

            </ImageButton>

        </LinearLayout>

    </LinearLayout>

    <!--buttons-->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        tools:context=".ButtonsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <Button
                style="@style/buttons_style"
                android:text="@string/playlist_button">
            </Button>

            <Button
                style="@style/buttons_style"
                android:text="@string/albums_button">
            </Button>

            <Button
                style="@style/buttons_style"
                android:text="@string/downloaded_button">
            </Button>
        </LinearLayout>

    </LinearLayout>

    <!-- playlist -->
    <ScrollView
        android:id="@+id/playlist"
        android:layout_below="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/liked_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/liked">

                    </ImageView>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/liked_playlist"
                        android:textColor="@color/white">

                    </TextView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_playlist"
                            android:textColor="@color/white">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playlist_song_number"
                            android:textColor="@color/white">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</RelativeLayout>